# pyfgt

./: .appveyor.yml  .gitmodules  CMakeLists.txt  README.md  setup.py
.github/workflows/: conda.yml  pip.yml  wheels.yml
conda.recipe/: meta.yaml
docs/: conf.py  index.rst  pyfgt.rst
src/: main.cpp
tests/: test_basic.py
